--- a/src/app/business/serarea/serarea-fieldtype/serarea-fieldtype.component.html
+++ b/src/app/business/serarea/serarea-fieldtype/serarea-fieldtype.component.html
@@ -9,6 +9,7 @@
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
+    <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
   </div>
   <!--数据-->
   <p-table [columns]="cols" [value]="fieldTypes" selectionMode="multiple" [(selection)]="selectedfieldTypes" (onRowSelect)="onRowSelect($event)">
@@ -53,6 +54,34 @@
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="addsSave()">保存</button>
         <button class="btn btn-warning" type="button" (click)="addDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+    <div class="ui-g ui-fluid">
+      <!--分类名称-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addAreaName1">分类名称：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addAreaName1" [(ngModel)]="modifyFieldType.categoryName" ([value])="this.modifyFieldType.categoryName"/>
+        </div>
+      </div>
+      <!--序列-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addcameraName1">分类序列：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText type="number" id="addcameraName1" [(ngModel)]="modifyFieldType.sequence" ([value])="this.modifyFieldType.sequence"/>
+        </div>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="modifySure()">确认</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
