--- a/src/app/business/intercept/intercept.component.html
+++ b/src/app/business/intercept/intercept.component.html
@@ -9,6 +9,7 @@
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
+    <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
   </div>
   <!--数据-->
   <p-table [columns]="cols" [value]="intercepts" selectionMode="multiple" [(selection)]="selectedintercepts" (onRowSelect)="onRowSelect($event)">
@@ -113,6 +114,72 @@
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="treeSelectAreaClick()">确定</button>
         <button class="btn btn-warning" type="button" (click)="areaDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+  <!--修改弹框-->
+  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+    <div class="ui-g ui-fluid">
+      <!--所属区划-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addAreaName1">所属区划：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label"  />
+        </div>
+      </div>
+      <!--所属服务区-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addserviceArea1">所属服务区：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="addserviceArea1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
+        </div>
+      </div>
+      <!--上下行-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addsaOrientation1">上下行：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="addsaOrientation1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
+        </div>
+      </div>
+      <!--卡口编号-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addbayonetCode1">卡口编号：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addbayonetCode1" [(ngModel)]="modifyIntercept.bayonetCode" ([value])="this.modifyIntercept.bayonetName"/>
+        </div>
+      </div>
+      <!--卡口名称-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="bayonetName1">卡口名称：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="bayonetName1" [(ngModel)]="modifyIntercept.bayonetName" ([value])="this.modifyIntercept.bayonetName"/>
+        </div>
+      </div>
+      <!--卡口类型-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label>卡口类型：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-radioButton name="group1" value="1" [(ngModel)]="modifyIntercept.bayonetType" label="进口" inputId="opt2"></p-radioButton>
+          <p-radioButton name="group1" value="2" [(ngModel)]="modifyIntercept.bayonetType" label="出口" inputId="opt3"></p-radioButton>
+        </div>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="modifySure()">确认</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
