--- a/src/app/business/video-group/video-group.component.html
+++ b/src/app/business/video-group/video-group.component.html
@@ -9,6 +9,7 @@
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
+    <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
   </div>
   <!--数据-->
   <p-table [columns]="cols" [value]="videoGroups" selectionMode="multiple" [(selection)]="selectedVideoGroups" (onRowSelect)="onRowSelect($event)">
@@ -106,6 +107,66 @@
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="treeSelectAreaClick()">确定</button>
         <button class="btn btn-warning" type="button" (click)="areaDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+
+  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addAreaName">所属区划：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
+        </div>
+      </div>
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addServiceAreaName1">所属服务区：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="addServiceAreaName1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
+        </div>
+      </div>
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="highDirec1">上下行：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="highDirec1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
+        </div>
+      </div>
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addgroupCode1">分组编号：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addgroupCode1" [(ngModel)]="modifyVideoGroup.groupCode" ([value])="this.modifyVideoGroup.groupName"/>
+        </div>
+      </div>
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addgroupName1">分组名称：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addgroupName1" [(ngModel)]="modifyVideoGroup.groupName" ([value])="this.modifyVideoGroup.groupName"/>
+        </div>
+      </div>
+      <!--<div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addenabled">是否可用：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-radioButton id="addenabled" name="group1" value="1" [(ngModel)]="addVideoGroup.enabled" label="可用" inputId="opt2" (onClick)="selectEnabledClick($event)"></p-radioButton>
+          <p-radioButton id="addenabled" name="group1" value="0" [(ngModel)]="addVideoGroup.enabled" label="不可用" inputId="opt3" (onClick)="selectEnabledClick($event)"></p-radioButton>
+        </div>
+      </div>-->
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="modifySure()">确认</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
