--- a/src/app/business/wifi/wifi.component.html
+++ b/src/app/business/wifi/wifi.component.html
@@ -9,6 +9,7 @@
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
+    <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
   </div>
   <!--数据-->
   <p-table [columns]="cols" [value]="wifis" selectionMode="multiple" [(selection)]="selectedwifis" (onRowSelect)="onRowSelect($event)">
@@ -115,4 +116,70 @@
       </div>
     </p-footer>
   </p-dialog>
+
+  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+    <div class="ui-g ui-fluid">
+      <!--所属区划-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addAreaName1">所属区划：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
+        </div>
+      </div>
+      <!--所属服务区-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addserviceArea1">所属服务区：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="addserviceArea1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
+        </div>
+      </div>
+      <!--上下行-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addsaOrientation1">上下行：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="addsaOrientation1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
+        </div>
+      </div>
+      <!--设备编号-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="adddeviceCode1">设备编号：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="adddeviceCode1" [(ngModel)]="modifyWifi.deviceCode" ([value])="this.modifyWifi.deviceCode"/>
+        </div>
+      </div>
+      <!--设备位置-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="devicePosition1">设备位置：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="devicePosition1" [(ngModel)]="modifyWifi.devicePosition" ([value])="this.modifyWifi.devicePosition"/>
+        </div>
+      </div>
+      <!--位置编号-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="devicePositionCode1">位置编号：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="devicePositionCode1" [(ngModel)]="modifyWifi.devicePositionCode" ([value])="this.modifyWifi.devicePositionCode"/>
+        </div>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="modifySure()">确认</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+
 </div>
